[package]
name = "bdc-stream-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
serde = { version="1.0", features=["derive"] }
tokio = {version="1.26.0", features=["net", "macros", "rt-multi-thread", "io-util", "time"]}
tokio-utils = "0.1.2"
toml = "0.7.4"
